fixed skill container overflow

--- a/src/styles.css
+++ b/src/styles.css
@@ -154,7 +154,7 @@ body:not(.loaded) .header-right{
 }
 
 .skills-container{
-    width: 100%;
+    /* width: 100%; */
     padding: 2% 1%;
     display: flex;
     flex-wrap: wrap;
